--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     </style>
 </head>
 <body>
+    UTC<br/>
+    <div id="divUTC"></div><br/>
+    Your Local Time with respect to above UTC time<br/>
+    <div id="divLocal">
+    </div> 
+
     <ul id="output">
 
     </ul>
